Changelog
=========

1.0b6 - unreleased
------------------

* Avoid empty <div class="field"> tag for title and description in 
  item.pt.
  [gaudenzius]

 
1.0b5 - 2010-08-05
------------------

* Fix folder ordering bug.
  See: http://code.google.com/p/dexterity/issues/detail?id=113
  [optilude]

* Switch to the .Title() and .Description() methods of fti when used in 
  a translatable context, to ensure that these strings are translated.
  [mj]

* Add Norwegian translation.
  [mj]


1.0b4 - 2010-07-22
------------------

* Improve robustness: catch and log import errors when trying to resolve
  behaviours.
  [wichert]

* Add German translation from Christian Stengel.
  [wichert]


1.0b3 - 2010-07-19
------------------

* Clarify license to GPL version 2 only.
  [wichert]

* Configure Babel plugins for i18n extraction and add a Dutch translation.
  [wichert]


1.0b2 - 2010-05-24
------------------

* Fix invalid license declaration in package metadata.
  [wichert]

* Do not assume "view" is the right immediate view - in some cases
  it might not exist. Instead use the absolute URL directly.
  [wichert]


1.0b1 - 2010-04-20
------------------

* Update the label for the default fieldset to something more humane.
  [wichert]

* Make the default add form extend BrowserPage to avoid warnings about
  security declarations for nonexistent methods.  This closes
  http://code.google.com/p/dexterity/issues/detail?id=69
  [davisagli]

* For now, no longer ensure that Dexterity content provides ILocation (in
  particular, that it has a __parent__ pointer), since that causes problems
  when exporting in Zope 2.10.
  [davisagli]

* Don't assume the cancel and actions buttons are always present in the
  default forms.
  [optilude]

1.0a3 - 2010-01-08
------------------

* require zope.filerepresentation>=3.6.0 for IRawReadFile
  [csenger]

1.0a2 - 2009-10-12
------------------

* Added support for zope.size.interfaces.ISized. An adapter to this interface